# chrome-scraper

./: .gitignore  README.md  chrome.py  pyproject.toml  reviews.py  search.py  suggest.py
utils/: common.py  constants.py
